PLY/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod main RBRACK
Rule 2     progobj -> objeto progobj
Rule 3     progobj -> <empty>
Rule 4     progmod -> modulo progmod
Rule 5     progmod -> <empty>
Rule 6     semCreaDP -> <empty>
Rule 7     cuadInicial -> <empty>
Rule 8     main -> MAIN LPAREN RPAREN iniciaMain bloque
Rule 9     iniciaMain -> <empty>
Rule 10    objeto -> OBJECT IDENTI foundObjID herencia LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ
Rule 11    herencia -> LPAREN IDENTI RPAREN
Rule 12    herencia -> <empty>
Rule 13    objmet -> modulo objmet
Rule 14    objmet -> <empty>
Rule 15    foundObjID -> <empty>
Rule 16    vieneAsignacion -> asignacion masAsign
Rule 17    vieneAsignacion -> <empty>
Rule 18    masAsign -> asignacion masAsign
Rule 19    masAsign -> <empty>
Rule 20    acabaOBJ -> <empty>
Rule 21    bloque -> LBRACK bloq RBRACK
Rule 22    bloq -> estret
Rule 23    bloq -> <empty>
Rule 24    estret -> estatuto bloq
Rule 25    estret -> return bloq
Rule 26    estret -> varcte bloq
Rule 27    estatuto -> lectura
Rule 28    estatuto -> asignacion
Rule 29    estatuto -> condicion
Rule 30    estatuto -> escritura
Rule 31    estatuto -> ciclo
Rule 32    vars -> tipo IDENTI vartam SEMCOL insertVar varsagain
Rule 33    vartam -> tamano
Rule 34    vartam -> <empty>
Rule 35    varsagain -> vars
Rule 36    varsagain -> ENDVAR SEMCOL
Rule 37    objvars -> visibilidad tipo IDENTI vartam insertObjVar SEMCOL delVis objvarsagain
Rule 38    visibilidad -> PUBLIC foundKeyword
Rule 39    visibilidad -> PRIVATE foundKeyword
Rule 40    foundKeyword -> <empty>
Rule 41    insertObjVar -> <empty>
Rule 42    delVis -> <empty>
Rule 43    objvarsagain -> objvars
Rule 44    objvarsagain -> ENDVAR SEMCOL
Rule 45    insertVar -> <empty>
Rule 46    tamano -> LCORCH CONINT metearr RCORCH tammatriz
Rule 47    metearr -> <empty>
Rule 48    tammatriz -> LCORCH CONINT RCORCH
Rule 49    tammatriz -> <empty>
Rule 50    return -> RETURN superexpresion SEMCOL
Rule 51    asignacion -> IDENTI tieneObjeto IGUAL foundEQ exp SEMCOL
Rule 52    tieneObjeto -> PUNTO IDENTI foundID
Rule 53    tieneObjeto -> foundID
Rule 54    tieneObjeto -> dimension
Rule 55    foundID -> <empty>
Rule 56    foundEQ -> <empty>
Rule 57    escritura -> PRINT LPAREN prntparam RPAREN SEMCOL
Rule 58    prntparam -> superexpresion
Rule 59    prntparam -> <empty>
Rule 60    lectura -> READ LPAREN IDENTI dimobj RPAREN SEMCOL
Rule 61    dimobj -> dimension
Rule 62    dimobj -> PUNTO IDENTI
Rule 63    condicion -> IF LPAREN superexpresion RPAREN genCuadIF bloque tieneelse
Rule 64    tieneelse -> ELSE genCuadElse bloque acabaIF
Rule 65    tieneelse -> acabaIF
Rule 66    genCuadIF -> <empty>
Rule 67    acabaIF -> <empty>
Rule 68    genCuadElse -> <empty>
Rule 69    ciclo -> dowhile
Rule 70    ciclo -> for
Rule 71    ciclo -> while
Rule 72    dowhile -> DO doMeteCont bloque WHILE LPAREN superexpresion RPAREN SEMCOL doTermina
Rule 73    doMeteCont -> <empty>
Rule 74    doTermina -> <empty>
Rule 75    while -> WHILE meteContWhile LPAREN superexpresion RPAREN whileGeneraFalso bloque whileTermina
Rule 76    meteContWhile -> <empty>
Rule 77    whileGeneraFalso -> <empty>
Rule 78    whileTermina -> <empty>
Rule 79    for -> FOR LPAREN asignacion meteContWhile superexpresion SEMCOL whileGeneraFalso asignacion RPAREN bloque whileTermina
Rule 80    dimension -> LCORCH esDimensionada exp RCORCH segParte matriz
Rule 81    matriz -> LCORCH exp sonDosDims RCORCH
Rule 82    matriz -> soloUnaDim
Rule 83    esDimensionada -> <empty>
Rule 84    segParte -> <empty>
Rule 85    soloUnaDim -> <empty>
Rule 86    sonDosDims -> <empty>
Rule 87    termino -> factor term
Rule 88    term -> POR foundMUDI factor genCuadMUDI term
Rule 89    term -> DIVISI foundMUDI factor genCuadMUDI term
Rule 90    term -> <empty>
Rule 91    foundMUDI -> <empty>
Rule 92    genCuadMUDI -> <empty>
Rule 93    factor -> LPAREN foundLP exp RPAREN foundRP
Rule 94    factor -> menunario varcte
Rule 95    menunario -> MENOS
Rule 96    menunario -> <empty>
Rule 97    foundLP -> <empty>
Rule 98    foundRP -> <empty>
Rule 99    modulo -> FUNC modtipo IDENTI semCreaMod LPAREN modparams RPAREN modbloque
Rule 100   modtipo -> tipos
Rule 101   modtipo -> VOID
Rule 102   modparams -> tipos IDENTI foundParam masmodparams
Rule 103   modparams -> <empty>
Rule 104   foundParam -> <empty>
Rule 105   masmodparams -> SEMCOL modparams
Rule 106   masmodparams -> <empty>
Rule 107   modbloque -> LBRACK noVars RBRACK retornoMOD
Rule 108   noVars -> meteInicio vars modbloq
Rule 109   noVars -> meteInicio modbloq
Rule 110   retornoMOD -> <empty>
Rule 111   meteInicio -> <empty>
Rule 112   modbloq -> estatuto modbloq
Rule 113   modbloq -> return modbloq
Rule 114   modbloq -> varcte modbloq
Rule 115   modbloq -> <empty>
Rule 116   semCreaMod -> <empty>
Rule 117   varcte -> otrasconst
Rule 118   varcte -> cteid
Rule 119   cteid -> IDENTI funcdimobj
Rule 120   funcdimobj -> metodoCall
Rule 121   funcdimobj -> dimension
Rule 122   funcdimobj -> PUNTO IDENTI llamaObjeto limpia
Rule 123   funcdimobj -> foundID
Rule 124   limpia -> <empty>
Rule 125   metodoCall -> LPAREN generaERA llamaParam RPAREN resetPARAM SEMCOL
Rule 126   llamaObjeto -> foundID
Rule 127   llamaObjeto -> metodoCall
Rule 128   llamaObjeto -> dimension
Rule 129   llamaParam -> exp generaPARAM mascall
Rule 130   llamaParam -> <empty>
Rule 131   mascall -> COMMA exp generaPARAM mascall
Rule 132   mascall -> <empty>
Rule 133   generaERA -> <empty>
Rule 134   generaPARAM -> <empty>
Rule 135   resetPARAM -> <empty>
Rule 136   otrasconst -> CONFLO foundNUMFLO
Rule 137   otrasconst -> CONINT foundNUMINT
Rule 138   otrasconst -> conbol
Rule 139   otrasconst -> CONSTR foundSTR
Rule 140   foundNUMINT -> <empty>
Rule 141   foundNUMFLO -> <empty>
Rule 142   foundSTR -> <empty>
Rule 143   conbol -> TRUE foundBOOL
Rule 144   conbol -> FALSE foundBOOL
Rule 145   foundBOOL -> <empty>
Rule 146   tipo -> tipos
Rule 147   tipo -> IDENTI
Rule 148   tipos -> INT
Rule 149   tipos -> FLOAT
Rule 150   tipos -> STRING
Rule 151   tipos -> BOOL
Rule 152   expresion -> exp compara
Rule 153   compara -> MENQUE foundComp exp genCuadMUDI
Rule 154   compara -> MAYQUE foundComp exp genCuadMUDI
Rule 155   compara -> DIFERE foundComp exp genCuadMUDI
Rule 156   compara -> MENIGU foundComp exp genCuadMUDI
Rule 157   compara -> MAYIGU foundComp exp genCuadMUDI
Rule 158   compara -> IGUIGU foundComp exp genCuadMUDI
Rule 159   compara -> <empty>
Rule 160   foundComp -> <empty>
Rule 161   exp -> termino expre
Rule 162   expre -> MAS foundPLMI termino genCuadMUDI expre
Rule 163   expre -> MENOS foundPLMI termino genCuadMUDI expre
Rule 164   expre -> <empty>
Rule 165   foundPLMI -> <empty>
Rule 166   superexpresion -> expresion superexp
Rule 167   superexp -> logicos
Rule 168   superexp -> <empty>
Rule 169   logicos -> andor expresion genCuadMUDI maslogicos
Rule 170   andor -> AND foundANDOR
Rule 171   andor -> OR foundANDOR
Rule 172   foundANDOR -> <empty>
Rule 173   maslogicos -> logicos
Rule 174   maslogicos -> <empty>

Terminals, with rules where they appear

AND                  : 170
BOOL                 : 151
COMMA                : 131
CONFLO               : 136
CONINT               : 46 48 137
CONSTR               : 139
DIFERE               : 155
DIVISI               : 89
DO                   : 72
ELSE                 : 64
ENDVAR               : 36 44
FALSE                : 144
FLOAT                : 149
FOR                  : 79
FUNC                 : 99
IDENTI               : 1 10 11 32 37 51 52 60 62 99 102 119 122 147
IF                   : 63
IGUAL                : 51
IGUIGU               : 158
INT                  : 148
LBRACK               : 1 10 21 107
LCORCH               : 46 48 80 81
LPAREN               : 8 11 57 60 63 72 75 79 93 99 125
MAIN                 : 8
MAS                  : 162
MAYIGU               : 157
MAYQUE               : 154
MENIGU               : 156
MENOS                : 95 163
MENQUE               : 153
OBJECT               : 10
OR                   : 171
POR                  : 88
PRINT                : 57
PRIVATE              : 39
PROGRAM              : 1
PUBLIC               : 38
PUNTO                : 52 62 122
RBRACK               : 1 10 21 107
RCORCH               : 46 48 80 81
READ                 : 60
RETURN               : 50
RPAREN               : 8 11 57 60 63 72 75 79 93 99 125
SEMCOL               : 32 36 37 44 50 51 57 60 72 79 105 125
STRING               : 150
TRUE                 : 143
VOID                 : 101
WHILE                : 72 75
error                : 

Nonterminals, with rules where they appear

acabaIF              : 64 65
acabaOBJ             : 10
andor                : 169
asignacion           : 16 18 28 79 79
bloq                 : 21 24 25 26
bloque               : 8 63 64 72 75 79
ciclo                : 31
compara              : 152
conbol               : 138
condicion            : 29
cteid                : 118
cuadInicial          : 1
delVis               : 37
dimension            : 54 61 121 128
dimobj               : 60
doMeteCont           : 72
doTermina            : 72
dowhile              : 69
esDimensionada       : 80
escritura            : 30
estatuto             : 24 112
estret               : 22
exp                  : 51 80 81 93 129 131 152 153 154 155 156 157 158
expre                : 161 162 163
expresion            : 166 169
factor               : 87 88 89
for                  : 70
foundANDOR           : 170 171
foundBOOL            : 143 144
foundComp            : 153 154 155 156 157 158
foundEQ              : 51
foundID              : 52 53 123 126
foundKeyword         : 38 39
foundLP              : 93
foundMUDI            : 88 89
foundNUMFLO          : 136
foundNUMINT          : 137
foundObjID           : 10
foundPLMI            : 162 163
foundParam           : 102
foundRP              : 93
foundSTR             : 139
funcdimobj           : 119
genCuadElse          : 64
genCuadIF            : 63
genCuadMUDI          : 88 89 153 154 155 156 157 158 162 163 169
generaERA            : 125
generaPARAM          : 129 131
herencia             : 10
iniciaMain           : 8
insertObjVar         : 37
insertVar            : 32
lectura              : 27
limpia               : 122
llamaObjeto          : 122
llamaParam           : 125
logicos              : 167 173
main                 : 1
masAsign             : 16 18
mascall              : 129 131
maslogicos           : 169
masmodparams         : 102
matriz               : 80
menunario            : 94
meteContWhile        : 75 79
meteInicio           : 108 109
metearr              : 46
metodoCall           : 120 127
modbloq              : 108 109 112 113 114
modbloque            : 99
modparams            : 99 105
modtipo              : 99
modulo               : 4 13
noVars               : 107
objeto               : 2
objmet               : 10 13
objvars              : 10 43
objvarsagain         : 37
otrasconst           : 117
prntparam            : 57
progmod              : 1 4
progobj              : 1 2
program              : 0
resetPARAM           : 125
retornoMOD           : 107
return               : 25 113
segParte             : 80
semCreaDP            : 1
semCreaMod           : 99
soloUnaDim           : 82
sonDosDims           : 81
superexp             : 166
superexpresion       : 50 58 63 72 75 79
tamano               : 33
tammatriz            : 46
term                 : 87 88 89
termino              : 161 162 163
tieneObjeto          : 51
tieneelse            : 63
tipo                 : 32 37
tipos                : 100 102 146
varcte               : 26 94 114
vars                 : 1 35 108
varsagain            : 32
vartam               : 32 37
vieneAsignacion      : 10
visibilidad          : 37
while                : 71
whileGeneraFalso     : 75 79
whileTermina         : 75 79

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod main RBRACK

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod main RBRACK

    IDENTI          shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTI . semCreaDP cuadInicial LBRACK progobj vars progmod main RBRACK
    (6) semCreaDP -> .

    LBRACK          reduce using rule 6 (semCreaDP -> .)

    semCreaDP                      shift and go to state 4

state 4

    (1) program -> PROGRAM IDENTI semCreaDP . cuadInicial LBRACK progobj vars progmod main RBRACK
    (7) cuadInicial -> .

    LBRACK          reduce using rule 7 (cuadInicial -> .)

    cuadInicial                    shift and go to state 5

state 5

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial . LBRACK progobj vars progmod main RBRACK

    LBRACK          shift and go to state 6


state 6

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK . progobj vars progmod main RBRACK
    (2) progobj -> . objeto progobj
    (3) progobj -> .
    (10) objeto -> . OBJECT IDENTI foundObjID herencia LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ

    IDENTI          reduce using rule 3 (progobj -> .)
    INT             reduce using rule 3 (progobj -> .)
    FLOAT           reduce using rule 3 (progobj -> .)
    STRING          reduce using rule 3 (progobj -> .)
    BOOL            reduce using rule 3 (progobj -> .)
    OBJECT          shift and go to state 7

    progobj                        shift and go to state 8
    objeto                         shift and go to state 9

state 7

    (10) objeto -> OBJECT . IDENTI foundObjID herencia LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ

    IDENTI          shift and go to state 10


state 8

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj . vars progmod main RBRACK
    (32) vars -> . tipo IDENTI vartam SEMCOL insertVar varsagain
    (146) tipo -> . tipos
    (147) tipo -> . IDENTI
    (148) tipos -> . INT
    (149) tipos -> . FLOAT
    (150) tipos -> . STRING
    (151) tipos -> . BOOL

    IDENTI          shift and go to state 12
    INT             shift and go to state 14
    FLOAT           shift and go to state 11
    STRING          shift and go to state 13
    BOOL            shift and go to state 16

    tipos                          shift and go to state 15
    tipo                           shift and go to state 18
    vars                           shift and go to state 17

state 9

    (2) progobj -> objeto . progobj
    (2) progobj -> . objeto progobj
    (3) progobj -> .
    (10) objeto -> . OBJECT IDENTI foundObjID herencia LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ

    IDENTI          reduce using rule 3 (progobj -> .)
    INT             reduce using rule 3 (progobj -> .)
    FLOAT           reduce using rule 3 (progobj -> .)
    STRING          reduce using rule 3 (progobj -> .)
    BOOL            reduce using rule 3 (progobj -> .)
    OBJECT          shift and go to state 7

    objeto                         shift and go to state 9
    progobj                        shift and go to state 19

state 10

    (10) objeto -> OBJECT IDENTI . foundObjID herencia LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ
    (15) foundObjID -> .

    LPAREN          reduce using rule 15 (foundObjID -> .)
    LBRACK          reduce using rule 15 (foundObjID -> .)

    foundObjID                     shift and go to state 20

state 11

    (149) tipos -> FLOAT .

    IDENTI          reduce using rule 149 (tipos -> FLOAT .)


state 12

    (147) tipo -> IDENTI .

    IDENTI          reduce using rule 147 (tipo -> IDENTI .)


state 13

    (150) tipos -> STRING .

    IDENTI          reduce using rule 150 (tipos -> STRING .)


state 14

    (148) tipos -> INT .

    IDENTI          reduce using rule 148 (tipos -> INT .)


state 15

    (146) tipo -> tipos .

    IDENTI          reduce using rule 146 (tipo -> tipos .)


state 16

    (151) tipos -> BOOL .

    IDENTI          reduce using rule 151 (tipos -> BOOL .)


state 17

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars . progmod main RBRACK
    (4) progmod -> . modulo progmod
    (5) progmod -> .
    (99) modulo -> . FUNC modtipo IDENTI semCreaMod LPAREN modparams RPAREN modbloque

    MAIN            reduce using rule 5 (progmod -> .)
    FUNC            shift and go to state 23

    modulo                         shift and go to state 21
    progmod                        shift and go to state 22

state 18

    (32) vars -> tipo . IDENTI vartam SEMCOL insertVar varsagain

    IDENTI          shift and go to state 24


state 19

    (2) progobj -> objeto progobj .

    IDENTI          reduce using rule 2 (progobj -> objeto progobj .)
    INT             reduce using rule 2 (progobj -> objeto progobj .)
    FLOAT           reduce using rule 2 (progobj -> objeto progobj .)
    STRING          reduce using rule 2 (progobj -> objeto progobj .)
    BOOL            reduce using rule 2 (progobj -> objeto progobj .)


state 20

    (10) objeto -> OBJECT IDENTI foundObjID . herencia LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ
    (11) herencia -> . LPAREN IDENTI RPAREN
    (12) herencia -> .

    LPAREN          shift and go to state 26
    LBRACK          reduce using rule 12 (herencia -> .)

    herencia                       shift and go to state 25

state 21

    (4) progmod -> modulo . progmod
    (4) progmod -> . modulo progmod
    (5) progmod -> .
    (99) modulo -> . FUNC modtipo IDENTI semCreaMod LPAREN modparams RPAREN modbloque

    MAIN            reduce using rule 5 (progmod -> .)
    FUNC            shift and go to state 23

    modulo                         shift and go to state 21
    progmod                        shift and go to state 27

state 22

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod . main RBRACK
    (8) main -> . MAIN LPAREN RPAREN iniciaMain bloque

    MAIN            shift and go to state 28

    main                           shift and go to state 29

state 23

    (99) modulo -> FUNC . modtipo IDENTI semCreaMod LPAREN modparams RPAREN modbloque
    (100) modtipo -> . tipos
    (101) modtipo -> . VOID
    (148) tipos -> . INT
    (149) tipos -> . FLOAT
    (150) tipos -> . STRING
    (151) tipos -> . BOOL

    VOID            shift and go to state 31
    INT             shift and go to state 14
    FLOAT           shift and go to state 11
    STRING          shift and go to state 13
    BOOL            shift and go to state 16

    modtipo                        shift and go to state 32
    tipos                          shift and go to state 30

state 24

    (32) vars -> tipo IDENTI . vartam SEMCOL insertVar varsagain
    (33) vartam -> . tamano
    (34) vartam -> .
    (46) tamano -> . LCORCH CONINT metearr RCORCH tammatriz

    SEMCOL          reduce using rule 34 (vartam -> .)
    LCORCH          shift and go to state 34

    tamano                         shift and go to state 35
    vartam                         shift and go to state 33

state 25

    (10) objeto -> OBJECT IDENTI foundObjID herencia . LBRACK objvars vieneAsignacion objmet RBRACK acabaOBJ

    LBRACK          shift and go to state 36


state 26

    (11) herencia -> LPAREN . IDENTI RPAREN

    IDENTI          shift and go to state 37


state 27

    (4) progmod -> modulo progmod .

    MAIN            reduce using rule 4 (progmod -> modulo progmod .)


state 28

    (8) main -> MAIN . LPAREN RPAREN iniciaMain bloque

    LPAREN          shift and go to state 38


state 29

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod main . RBRACK

    RBRACK          shift and go to state 39


state 30

    (100) modtipo -> tipos .

    IDENTI          reduce using rule 100 (modtipo -> tipos .)


state 31

    (101) modtipo -> VOID .

    IDENTI          reduce using rule 101 (modtipo -> VOID .)


state 32

    (99) modulo -> FUNC modtipo . IDENTI semCreaMod LPAREN modparams RPAREN modbloque

    IDENTI          shift and go to state 40


state 33

    (32) vars -> tipo IDENTI vartam . SEMCOL insertVar varsagain

    SEMCOL          shift and go to state 41


state 34

    (46) tamano -> LCORCH . CONINT metearr RCORCH tammatriz

    CONINT          shift and go to state 42


state 35

    (33) vartam -> tamano .

    SEMCOL          reduce using rule 33 (vartam -> tamano .)


state 36

    (10) objeto -> OBJECT IDENTI foundObjID herencia LBRACK . objvars vieneAsignacion objmet RBRACK acabaOBJ
    (37) objvars -> . visibilidad tipo IDENTI vartam insertObjVar SEMCOL delVis objvarsagain
    (38) visibilidad -> . PUBLIC foundKeyword
    (39) visibilidad -> . PRIVATE foundKeyword

    PUBLIC          shift and go to state 43
    PRIVATE         shift and go to state 46

    objvars                        shift and go to state 44
    visibilidad                    shift and go to state 45

state 37

    (11) herencia -> LPAREN IDENTI . RPAREN

    RPAREN          shift and go to state 47


state 38

    (8) main -> MAIN LPAREN . RPAREN iniciaMain bloque

    RPAREN          shift and go to state 48


state 39

    (1) program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod main RBRACK .

    $end            reduce using rule 1 (program -> PROGRAM IDENTI semCreaDP cuadInicial LBRACK progobj vars progmod main RBRACK .)


state 40

    (99) modulo -> FUNC modtipo IDENTI . semCreaMod LPAREN modparams RPAREN modbloque
    (116) semCreaMod -> .

    LPAREN          reduce using rule 116 (semCreaMod -> .)

    semCreaMod                     shift and go to state 49

state 41

    (32) vars -> tipo IDENTI vartam SEMCOL . insertVar varsagain
    (45) insertVar -> .

    ENDVAR          reduce using rule 45 (insertVar -> .)
    IDENTI          reduce using rule 45 (insertVar -> .)
    INT             reduce using rule 45 (insertVar -> .)
    FLOAT           reduce using rule 45 (insertVar -> .)
    STRING          reduce using rule 45 (insertVar -> .)
    BOOL            reduce using rule 45 (insertVar -> .)

    insertVar                      shift and go to state 50

state 42

    (46) tamano -> LCORCH CONINT . metearr RCORCH tammatriz
    (47) metearr -> .

    RCORCH          reduce using rule 47 (metearr -> .)

    metearr                        shift and go to state 51

state 43

    (38) visibilidad -> PUBLIC . foundKeyword
    (40) foundKeyword -> .

    IDENTI          reduce using rule 40 (foundKeyword -> .)
    INT             reduce using rule 40 (foundKeyword -> .)
    FLOAT           reduce using rule 40 (foundKeyword -> .)
    STRING          reduce using rule 40 (foundKeyword -> .)
    BOOL            reduce using rule 40 (foundKeyword -> .)

    foundKeyword                   shift and go to state 52

state 44

    (10) objeto -> OBJECT IDENTI foundObjID herencia LBRACK objvars . vieneAsignacion objmet RBRACK acabaOBJ
    (16) vieneAsignacion -> . asignacion masAsign
    (17) vieneAsignacion -> .
    (51) asignacion -> . IDENTI tieneObjeto IGUAL foundEQ exp SEMCOL

    FUNC            reduce using rule 17 (vieneAsignacion -> .)
    RBRACK          reduce using rule 17 (vieneAsignacion -> .)
    IDENTI          shift and go to state 55

    vieneAsignacion                shift and go to state 53
    asignacion                     shift and go to state 54

state 45

    (37) objvars -> visibilidad . tipo IDENTI vartam insertObjVar SEMCOL delVis objvarsagain
    (146) tipo -> . tipos
    (147) tipo -> . IDENTI
    (148) tipos -> . INT
    (149) tipos -> . FLOAT
    (150) tipos -> . STRING
    (151) tipos -> . BOOL

    IDENTI          shift and go to state 12
    INT             shift and go to state 14
    FLOAT           shift and go to state 11
    STRING          shift and go to state 13
    BOOL            shift and go to state 16

    tipos                          shift and go to state 15
    tipo                           shift and go to state 56

state 46

    (39) visibilidad -> PRIVATE . foundKeyword
    (40) foundKeyword -> .

    IDENTI          reduce using rule 40 (foundKeyword -> .)
    INT             reduce using rule 40 (foundKeyword -> .)
    FLOAT           reduce using rule 40 (foundKeyword -> .)
    STRING          reduce using rule 40 (foundKeyword -> .)
    BOOL            reduce using rule 40 (foundKeyword -> .)

    foundKeyword                   shift and go to state 57

state 47

    (11) herencia -> LPAREN IDENTI RPAREN .

    LBRACK          reduce using rule 11 (herencia -> LPAREN IDENTI RPAREN .)


state 48

    (8) main -> MAIN LPAREN RPAREN . iniciaMain bloque
    (9) iniciaMain -> .

    LBRACK          reduce using rule 9 (iniciaMain -> .)

    iniciaMain                     shift and go to state 58

state 49

    (99) modulo -> FUNC modtipo IDENTI semCreaMod . LPAREN modparams RPAREN modbloque

    LPAREN          shift and go to state 59


state 50

    (32) vars -> tipo IDENTI vartam SEMCOL insertVar . varsagain
    (35) varsagain -> . vars
    (36) varsagain -> . ENDVAR SEMCOL
    (32) vars -> . tipo IDENTI vartam SEMCOL insertVar varsagain
    (146) tipo -> . tipos
    (147) tipo -> . IDENTI
    (148) tipos -> . INT
    (149) tipos -> . FLOAT
    (150) tipos -> . STRING
    (151) tipos -> . BOOL

    ENDVAR          shift and go to state 61
    IDENTI          shift and go to state 12
    INT             shift and go to state 14
    FLOAT           shift and go to state 11
    STRING          shift and go to state 13
    BOOL            shift and go to state 16

    tipos                          shift and go to state 15
    varsagain                      shift and go to state 60
    tipo                           shift and go to state 18
    vars                           shift and go to state 62

state 51

    (46) tamano -> LCORCH CONINT metearr . RCORCH tammatriz

    RCORCH          shift and go to state 63


state 52

    (38) visibilidad -> PUBLIC foundKeyword .

    IDENTI          reduce using rule 38 (visibilidad -> PUBLIC foundKeyword .)
    INT             reduce using rule 38 (visibilidad -> PUBLIC foundKeyword .)
    FLOAT           reduce using rule 38 (visibilidad -> PUBLIC foundKeyword .)
    STRING          reduce using rule 38 (visibilidad -> PUBLIC foundKeyword .)
    BOOL            reduce using rule 38 (visibilidad -> PUBLIC foundKeyword .)


state 53

    (10) objeto -> OBJECT IDENTI foundObjID herencia LBRACK objvars vieneAsignacion . objmet RBRACK acabaOBJ
    (13) objmet -> . modulo objmet
    (14) objmet -> .
    (99) modulo -> . FUNC modtipo IDENTI semCreaMod LPAREN modparams RPAREN modbloque

    RBRACK          reduce using rule 14 (objmet -> .)
    FUNC            shift and go to state 23

    modulo                         shift and go to state 64
    objmet                         shift and go to state 65

state 54

    (16) vieneAsignacion -> asignacion . masAsign
    (18) masAsign -> . asignacion masAsign
    (19) masAsign -> .
    (51) asignacion -> . IDENTI tieneObjeto IGUAL foundEQ exp SEMCOL

    FUNC            reduce using rule 19 (masAsign -> .)
    RBRACK          reduce using rule 19 (masAsign -> .)
    IDENTI          shift and go to state 55

    masAsign                       shift and go to state 66
    asignacion                     shift and go to state 67

state 55

    (51) asignacion -> IDENTI . tieneObjeto IGUAL foundEQ exp SEMCOL
    (52) tieneObjeto -> . PUNTO IDENTI foundID
    (53) tieneObjeto -> . foundID
    (54) tieneObjeto -> . dimension
    (55) foundID -> .
    (80) dimension -> . LCORCH esDimensionada exp RCORCH segParte matriz

    PUNTO           shift and go to state 72
    IGUAL           reduce using rule 55 (foundID -> .)
    LCORCH          shift and go to state 69

    foundID                        shift and go to state 71
    dimension                      shift and go to state 70
    tieneObjeto                    shift and go to state 68

state 56

    (37) objvars -> visibilidad tipo . IDENTI vartam insertObjVar SEMCOL delVis objvarsagain

    IDENTI          shift and go to state 73


state 57

    (39) visibilidad -> PRIVATE foundKeyword .

    IDENTI          reduce using rule 39 (visibilidad -> PRIVATE foundKeyword .)
    INT             reduce using rule 39 (visibilidad -> PRIVATE foundKeyword .)
    FLOAT           reduce using rule 39 (visibilidad -> PRIVATE foundKeyword .)
    STRING          reduce using rule 39 (visibilidad -> PRIVATE foundKeyword .)
    BOOL            reduce using rule 39 (visibilidad -> PRIVATE foundKeyword .)


state 58

    (8) main -> MAIN LPAREN RPAREN iniciaMain . bloque
    (21) bloque -> . LBRACK bloq RBRACK

    LBRACK          shift and go to state 74

    bloque                         shift and go to state 75

state 59

    (99) modulo -> FUNC modtipo IDENTI semCreaMod LPAREN . modparams RPAREN modbloque
    (102) modparams -> . tipos IDENTI foundParam masmodparams
    (103) modparams -> .
    (148) tipos -> . INT
    (149) tipos -> . FLOAT
    (150) tipos -> . STRING
    (151) tipos -> . BOOL

    RPAREN          reduce using rule 103 (modparams -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 11
    STRING          shift and go to state 13
    BOOL            shift and go to state 16

    tipos                          shift and go to state 76
    modparams                      shift and go to state 77

state 60

    (32) vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .

    FUNC            reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    MAIN            reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    RETURN          reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    READ            reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    IDENTI          reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    IF              reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    PRINT           reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    CONFLO          reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    CONINT          reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    CONSTR          reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    DO              reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    FOR             reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    WHILE           reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    TRUE            reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    FALSE           reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)
    RBRACK          reduce using rule 32 (vars -> tipo IDENTI vartam SEMCOL insertVar varsagain .)


state 61

    (36) varsagain -> ENDVAR . SEMCOL

    SEMCOL          shift and go to state 78


state 62

    (35) varsagain -> vars .

    FUNC            reduce using rule 35 (varsagain -> vars .)
    MAIN            reduce using rule 35 (varsagain -> vars .)
    RETURN          reduce using rule 35 (varsagain -> vars .)
    READ            reduce using rule 35 (varsagain -> vars .)
    IDENTI          reduce using rule 35 (varsagain -> vars .)
    IF              reduce using rule 35 (varsagain -> vars .)
    PRINT           reduce using rule 35 (varsagain -> vars .)
    CONFLO          reduce using rule 35 (varsagain -> vars .)
    CONINT          reduce using rule 35 (varsagain -> vars .)
    CONSTR          reduce using rule 35 (varsagain -> vars .)
    DO              reduce using rule 35 (varsagain -> vars .)
    FOR             reduce using rule 35 (varsagain -> vars .)
    WHILE           reduce using rule 35 (varsagain -> vars .)
    TRUE            reduce using rule 35 (varsagain -> vars .)
    FALSE           reduce using rule 35 (varsagain -> vars .)
    RBRACK          reduce using rule 35 (varsagain -> vars .)


state 63

    (46) tamano -> LCORCH CONINT metearr RCORCH . tammatriz
    (48) tammatriz -> . LCORCH CONINT RCORCH
    (49) tammatriz -> .

    LCORCH          shift and go to state 79
    SEMCOL          reduce using rule 49 (tammatriz -> .)

    tammatriz                      shift and go to state 80

state 64
